# fhdaisy

./: .gitignore  CHANGELOG.md  README.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  xtras.html  xtras.html.md
fhdaisy/: __init__.py  _modidx.py  comp.py  core.py  xtras.py
nbs/: 00_core.ipynb  01_xtras.ipynb  index.ipynb  nbdev.yml  sidebar.yml
