[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name="fhdaisy"
dynamic = ["version"]
description = "A FastHTML wrapper for Daisy-UI"
readme = "README.md"
requires-python=">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard", email = "info@fast.ai"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["fastcore","python-fasthtml"]

[project.urls]
Repository = "https://github.com/answerdotai/fhdaisy"
Documentation = "https://answerdotai.github.io/fhdaisy"

[project.entry-points.nbdev]
fhdaisy = "fhdaisy._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "fhdaisy.__version__"}

[tool.setuptools.packages.find]
include = ["fhdaisy"]

[tool.nbdev]
custom_sidebar = false
